# verified-nftables

./: .gitignore  KERNEL_DEV.md  Makefile  NFT_BUGS.md  NOTES.md  OPTIMIZER_TODO.md  README.md  SETUP.md  TODO.md  adversarial.md  instructions.md  instructions.org  issues.org  optiplex.nft  ruleset.nft
.claude/workflows/: adversarial-semantics-audit.js
.github/workflows/: build.yml  nft.opam  opam-switch-4.14.2
kernel/: .gitignore  build.sh  config.fragment
module/: Makefile  README.md  hello.c
patches/: README.md
proof/: .gitignore  CONFIG_PROOFS.md  DEVELOPMENT.md  Makefile  THEOREMS.md  _CoqProject  byteorder-gate.sh  corpus-okfail-gate.sh  corpus.sh  difftest.sh  difftest_battery.sh  e2e.sh  objects-sweep-gate.sh  parser_corpus.py  parser_corpus.sh  source-sweep-gate.sh
proof/battery_cases/: 01_value_set.nft  02_vmap_distinct.nft  03_overlap_prefix_diffverdict.nft  04_overlap_concat_diffverdict.nft  05_overlap_prefix_sameverdict.nft  06_disjoint_prefix.nft  07_dnat_overlap.nft  08_snat_map.nft  09_meta_mark_map.nft  10_interval_ranges.nft  11_negated.nft  12_concat_tcp_dport.nft  13_partial_range_diffverdict.nft  14_concat_partial.nft  15_silent_daddr.nft  16_tcp_dport_set.nft  17_udp_dport_set.nft  18_tcp_dport_vmap.nft  19_meta_mark_set.nft  20_ctstate_mask_union.nft  MINIMAL_nft_optimize_failclosed_bug.nft  README.md  probe_overlap_vmap.sh
proof/battery_cases/nft_optimize_bisect/: bisect_test.sh  case_bug1.nft
proof/battery_cases/nft_optimize_bug1_scope/: ct_status_dnat.sh  tcp_flags_failopen.sh
proof/battery_cases/nft_optimize_bug3_crash/: MINIMAL_crash.nft  crash.sh
proof/extracted/: LIBRARY.md  codec.ml  corpus_test.ml  dune  example.ml  glue.ml  lexer.mll  nft2coq.ml  nft_ast.ml  nft_config.ml  nft_emit.ml  nft_inject.ml  nft_lower.ml  nft_parse.ml  nftc.ml  nftc.mli  nftc_cli.ml  nl_send.ml  nl_send_test.sh  nl_stubs.c  parse_test.ml  parser.mly  semtest.ml
proof/parser_corpus/: README.md
proof/parser_corpus/github/: 0-draft_microsegmentation-deepdive__06-host-nftables_policy.nft.nft  01rabbit_Azazel-Gadget__nftables_first_minute.nft.nft  0x8100_handytools__Linux_nft_nft.d_10-input.nft.nft  161sam_Pentest-Home-Lab-SBCs__edge_roles_wireless_nftables_wireless.nft.nft  161sam_Pentest-Home-Lab-SBCs__wireless-core_etc_nftables_lab_00-base.nft.nft  9566618_shadowproxy__root_etc_shadowproxy_shadowproxy.nft.nft  Alphadelta14_nftables__tests_shell_testcases_nft-f_dumps_sample-ruleset.nft.nft  BasisResearch_certified-firewall-experiment__kernel_examples_dnat.nft.nft  BasisResearch_certified-firewall-experiment__kernel_examples_nat6.nft.nft  BasisResearch_verified-nftables__ruleset.nft.nft  BayKeremm_linfo2347-network-attacks__filters_normal_op_http.nft.nft  CNES_pepsal__conf_pepsal.nft.nft  CallMeR_pve_configuration_notes__src_debian_debian_ts_nftables.conf.nft  Catalinaqi_Project_Maritime_Zero_Trust_Architecture__configs_nftables_rules.nft.nft  Cheaussette_networkSecurityProject__nftrules_r1Rules.nft.nft  Cheaussette_networkSecurityProject__nftrules_r2Rules.nft.nft  CyberPuck_cluster-pecan__playbooks_roles_networking_files_nftables.conf.nft  DSU-DefSec_cyber__open2_nftables-1.0.9_files_nftables_ipv6-mangle.nft.nft  DSU-DefSec_cyber__open2_nftables-1.0.9_tests_shell_testcases_nft-f_dumps_sample-ruleset.nft.nft  DShield-ISC_dshield__etc_network_ruleset-init.nft.nft  DigitaleGesellschaft_DNS-Resolver__configuration-files_roles_base_templates_nftables.conf.j2.nft  Earnestly_pkgbuilds__system-config_etc-nftables.conf.nft  GhostPortTechnologies_Ghostport-Phantom-OS__etc_gpmodes_common.nft.nft  GongT_router.target__services_nftables_configs_router.nft.nft  GuilhermeDeitos_TrabalhoTDS_Containers__trabalhotds_runc_rootfs_usr_share_doc_nftables_examples_load_balancing.nft.nft  HITOSTeam_OS_Workspace__ext4-fs-packer_extra_rootfs_usr_share_nftables_inet-filter.nft.nft  HexZoNetwork_HexTyl__config_nftables_hextyl_ddos.nft.nft  HolgerHees_smartserver__roles_firewall_templates_etc_nftables_00_init.nft.nft  KDE_syntax-highlighting__autotests_input_highlight.nft.nft  KaseiHaku_Software__V2Ray_TransparentProxy_nftables_nftablesRuleset.nft.nft  KilimcininKorOglu_lankeeper__configs_sysconf_nftables.conf.tmpl.nft  Loongson-Cloud-Community_dockerfiles__kubevirt_virt-handler_0.56.0_ipv6-nat.nft.nft  MargoPas_Linux_labs__lab_3_nftables_3_filter_input_80.nft.nft  MargoPas_Linux_labs__lab_3_nftables_9_abc_set_chain.nft.nft  MatthewCash_nixos-config__systems_mango_nixos_firewall_ruleset.nft.nft  MatthewCash_nixos-config__systems_nixvm_nixos_firewall_ruleset.nft.nft  MatthewCash_nixos-config__systems_zenbook_nixos_firewall_ruleset.nft.nft  MayNiklas_nixos__machines_the-hub_ruleset.nft.nft  MihaiStreames_PoneyHot__infra_server-a_nftables.nft.nft  MikeHorn-git_dotfiles__dot_etc_nftables.conf.tmpl.nft  (+190 more)
proof/tests/illtyped/: comma_list_on_ports.nft  ct_state_https.nft  iifname_and_0xff.nft  objref_undeclared.nft  objref_wrong_kind.nft  set_ref_type_mismatch.nft  tproxy_nonliteral.nft  undefined_define.nft  unknown_nat_flag.nft  (+4 more)
proof/theories/: Bytecode.v  Bytes.v  Compile.v  Concat_Iv.v  Concatm_Witness.v  Correct.v  Ct_Flow.v  Ct_State.v  Dnat_Rewrite.v  Eval_Fw.v  Example_Ruleset.v  Extract.v  Fib_Local.v  Ifname_Exact.v  Iif_Index.v  Ip6_Nat.v  Ivset_Witness.v  Ivsetg_Witness.v  Limit_Over.v  Main.v  Metaset_Witness.v  Netstate_MultiAddr.v  Nft_Demo_Concrete.v  Nft_Demo_Symbolic.v  Nft_Tactics.v  Nftval.v  Optimize.v  Optimize_Absorb.v  Optimize_Concat.v  Optimize_ConcatK.v  Optimize_ConcatM.v  Optimize_Ctmask.v  Optimize_Dnat.v  Optimize_Dscp.v  Optimize_Dscpv.v  Optimize_Ivmixg.v  Optimize_Ivset.v  Optimize_Ivsetg.v  Optimize_Ivsett.v  Optimize_Mapn.v  (+47 more)
reports/: default-linearization-audit.md  upstream-ct-id.md
rulesets/: optiplex.nft  router.nft  tutorial.nft
vm/: mkosi.conf  mkosi.postinst  run.sh  ssh.sh
vm-e2e/: .gitignore  README.md  e2e-battery.sh  mkosi.conf  mkosi.postinst  vmtest.sh
vm-e2e/mkosi.repart/: 10-root.conf
vm-e2e/rules/: concat.nft  counters.nft  ctstate.nft  metamark.nft  namedset.nft  nat.nft
vm/mkosi.conf.d/: arch.conf  debian.conf
(+106 files in other folders)
