opam-version: "2.0"
compiler: [
  "base-bigarray.base"
  "base-threads.base"
  "base-unix.base"
  "ocaml.4.14.2"
  "ocaml-base-compiler.4.14.2"
  "ocaml-config.2"
  "ocaml-options-vanilla.1"
]
roots: [
  "conf-gcc.1.0"
  "coq.9.1.1"
  "dune.3.23.1"
  "menhir.20260209"
  "ocaml-base-compiler.4.14.2"
]
installed: [
  "base-bigarray.base"
  "base-threads.base"
  "base-unix.base"
  "conf-gcc.1.0"
  "conf-gmp.5"
  "conf-linux-libc-dev.0"
  "conf-pkg-config.4"
  "coq.9.1.1"
  "coq-core.9.1.1"
  "coq-stdlib.9.0.0"
  "coqide-server.9.1.1"
  "dune.3.23.1"
  "menhir.20260209"
  "menhirCST.20260209"
  "menhirGLR.20260209"
  "menhirLib.20260209"
  "menhirSdk.20260209"
  "ocaml.4.14.2"
  "ocaml-base-compiler.4.14.2"
  "ocaml-config.2"
  "ocaml-options-vanilla.1"
  "ocamlfind.1.9.8"
  "rocq-core.9.1.1"
  "rocq-runtime.9.1.1"
  "rocq-stdlib.9.0.0"
  "zarith.1.14"
]
