; The verified-extracted compiler/optimizer (Compile, Optimize, Syntax, ...),
; the untrusted Codec (rendering), and the public Nftc facade, built as a
; reusable library. (wrapped false) keeps the extracted module names global so
; the glue can reference them unqualified. -w -a silences warnings in the
; machine-generated extraction output.
;
; String is EXCLUDED: re-running the extraction (Extract.vo) emits a String.ml
; holding Coq's String.length (Optimize_Uncond's fresh-name seed measures set
; names).  Inside a (wrapped false) library that module SHADOWS Stdlib.String,
; breaking every `String.get`/`String.sub` in ExtrOcamlNativeString's inline
; string-match realizer (Nftval.sbytes, Symbols.parse_dec) and in hand-written
; glue.  Excluded, `String` resolves to Stdlib.String everywhere; the one
; extracted use (`open String` + `length` in Optimize_Uncond.ml) then means
; Stdlib.String.length — the same int on the same native string as Coq's
; String.length under the ExtrOcamlNativeString+NatInt seams.
(library
 (name nftc)
 (modules (:standard \ glue corpus_test example semtest parse_test nft2coq
                       nftc_cli nl_send String))
 (wrapped false)
 (flags (:standard -w -a)))

; The verified optimizer/compiler as a first-class CLI (TODO 2a: nftc_cli.exe),
; bottoming out in the extracted Optimize_Uncond.optimize_table_uncond /
; Compile.compile_chain, plus the untrusted netlink sender Nl_send (TODO 2d).
(executable
 (name nftc_cli)
 (modules nftc_cli nl_send)
 (libraries nftc unix)
 (foreign_stubs (language c) (names nl_stubs))
 (flags (:standard -w -a)))

; The .nft -> Syntax-AST frontend (untrusted glue): an ocamllex lexer and a
; Menhir parser feeding the lowering pass (Nft_lower). Part of the nftc library
; so the parsed AST flows straight into the verified compile/optimize pipeline.
(ocamllex lexer)
(menhir (modules parser))

; The untrusted glue: a forward demo (glue) and the corpus differential test.
(executables
 (names glue corpus_test)
 (modules glue corpus_test)
 (libraries nftc unix)
 (flags (:standard -w -a)))

; A standalone consumer of the library (public API demo).
(executable
 (name example)
 (modules example)
 (libraries nftc))

; An executable witness of compile_chain_correct / optimize_chain_correct: run
; the extracted DSL semantics, bytecode VM, and compiler on concrete packets.
(executable
 (name semtest)
 (modules semtest)
 (libraries nftc)
 (flags (:standard -w -a)))

; The .nft frontend's validation harness + CLI: with no args, parses
; ../../ruleset.nft and checks the resulting AST's verdicts against
; Example_Ruleset.v's proven properties, and checks difftest.sh's ruleset lowers
; to the known-good hand-built AST; with a file arg, parses it and prints the
; compiled netlink bytecode.
(executable
 (name parse_test)
 (modules parse_test)
 (libraries nftc)
 (flags (:standard -w -a)))

; nft2coq: emit a parsed ruleset's AST as a Coq source file, so a proof can
; Require Import it and reason about the parser's actual output (no hand step).
(executable
 (name nft2coq)
 (modules nft2coq)
 (libraries nftc)
 (flags (:standard -w -a)))
